2012-12-26 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/binutils/configure.in,
	  support/sdbinutils/binutils/configure:
	  fixed bug #3527589 - "Build fails on archlinux ppc"

2012-12-25 Borut Razem <borut.razem AT gmail.com>

	* src/pic14/gen.c, src/pic14/main.c:
	  applied patch #3193179 - "pic14 naked ISR handler"
	  implementing RFE #1432077 - "naked for pic14",
	  thanks to Wolfgang Jung

2012-12-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/frexpf.c:
	  Test for frexpf().
	* src/z80/gen.c:
	  Do not attempt to restore pair using dec, when it has been pushed.

2012-12-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.c (constVal),
	* sdas/asxxsrc/aslex.c (nxtline): fixed warnings

2012-12-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp:
	  Send error message about invalid root to crr instead of cout.

2012-12-19 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/SDCCglobl.h, support/cpp/sdcpp.opt,
	  support/cpp/libcpp/init.c, support/cpp/sdcpp-opts.c
	  fixed bug 3572584 - "Trigraphs don't work", 2nd try:
	  trigraphs are enabled by default in sdcpp

2012-12-16 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCglobl.h, src/SDCCmain.c:
	  fixed bug 3572584 - "Trigraphs don't work"

2012-12-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Do not generate redundant loads when fetching pair from regs.

2012-12-02 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/cinc2h.pl,
	  support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl: I changed the copyright.

2012-12-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y (labeled_statement): fixed bug #3590884

2012-11-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (algebraicOpts),
	* src/SDCCicode.c (operandOperation),
	* src/SDCCsymt.c (bitsForType),
	* src/SDCCval.h,