@@ -180,16 +180,24 @@ external_definition
    ;
 
 function_definition
-   : function_declarator function_body  {   /* function type not specified */
-                                   /* assume it to be 'int'       */
-                                   addDecl($1,0,newIntLink());
-                                   $$ = createFunction($1,$2);
+   : function_declarator 
+         {   /* function type not specified */
+             /* assume it to be 'int'       */
+             addDecl($1,0,newIntLink());
+             $1 = createFunctionDecl($1);
+         }
+      function_body  {
+                                   $$ = createFunction($1,$3);
                                }
-   | declaration_specifiers function_declarator function_body
+   | declaration_specifiers function_declarator
+         {
+              pointerTypes($2->type,copyLinkChain($1));
+              addDecl($2,0,$1);
+              $2 = createFunctionDecl($2);
+         }
+     function_body
                                 {
-                                    pointerTypes($2->type,copyLinkChain($1));
-                                    addDecl($2,0,$1);
-                                    $$ = createFunction($2,$3);
+                                    $$ = createFunction($2,$4);
                                 }
    ;
 
@@ -551,7 +559,7 @@ init_declarator_list
 
 init_declarator
    : declarator                  { $1->ival = NULL; }
-   | declarator '=' initializer  { $1->ival = $3; }
+   | declarator '=' initializer  { $1->ival = $3; seqPointNo++; }
    ;
 
 designation_opt
@@ -1277,6 +1285,7 @@ function_declarator2
           NestLevel++;
           STACK_PUSH(blockNum, currBlockno);
           currBlockno = ++blockNo;
+          seqPointNo++; /* not a true sequence point, but helps resolve scope */
         }
      parameter_type_list ')'
         {
@@ -1296,6 +1305,7 @@ function_declarator2
           /* nest level was incremented to take care of the parms  */
           NestLevel--;
           currBlockno = STACK_POP(blockNum);
+          seqPointNo++; /* not a true sequence point, but helps resolve scope */
 
           // if this was a pointer (to a function)
           if (!IS_FUNC($1->type))
@@ -1428,7 +1438,6 @@ parameter_declaration
           addDecl ($2, 0, $1);
           for (loop = $2; loop; loop->_isparm = 1, loop = loop->next)
             ;
-          addSymChain (&$2);
           $$ = symbolVal ($2);
           ignoreTypedefType = 0;
         }
@@ -1550,11 +1559,7 @@ abstract_declarator2
               $$ = $1;
             }
           $1->next = p;
-
-          // disabled to fix bug 3190029
-//        // remove the symbol args (if any)
-//        cleanUpLevel(SymbolTab, NestLevel + 1);
-   }
+        }
    ;
 
 initializer
