@@ -1,3 +1,14 @@
+2012-12-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCC.y,
+	* src/SDCCsymt.c,
+	* src/SDCCsymt.h,
+	* src/SDCCast.c,
+	* src/SDCCast.h: Fixed some scope related bugs including
+	  #319029 (improved previous fix), #3513308, and #3511513
+	* support/regression/tests/gcc-torture-execute-960116-1.c:
+	  re-enabled test
+
 2012-12-26 Borut Razem <borut.razem AT gmail.com>
 
 	* support/sdbinutils/binutils/configure.in,
